--- a/themes/bootstrap/css/styles.css
+++ b/themes/bootstrap/css/styles.css
@@ -1,3 +1,17 @@
 #page {
     padding-top: 60px;
 }
+/* grid border */
+.grid-view table.items th, .grid-view table.items td {
+    border: 1px solid gray !important;
+}
+
+/* disable selected for merged cells */
+.grid-view td.merge {
+    background: none repeat scroll 0 0 #F8F8F8;
+}
+
+/* disable selected for extrarow in bootstrap */
+table.table td.extrarow, table.table td.extrarow:hover {
+    background: none repeat scroll 0 0 #E0E0E0;
+}
